--- a/index.css
+++ b/index.css
@@ -56,6 +56,62 @@
     font-size: 16px;
     color: white;
     line-height: 21px;
-
 }
-
+/* preview element */
+.preview-element {
+    width: 892px;
+    height: 422px;
+    margin-top: 32px;
+    margin-left: 120px;
+}
+.preview-title {
+    font-family: Aleo, serif;
+    font-size: 80px;
+    font-weight: bold;
+    color: white;
+    margin: 0px;
+}
+.preview-text {
+    font-family: Aleo, serif;
+    font-size: 20px;
+    font-weight: bold;
+    font-style: italic;
+    color: white;
+}
+.search {
+    width: 892px;
+    height: 95px;
+    background-color: rgba(255, 255, 255, 0.7);
+    border-radius: 16px;
+    margin-top: 46px;
+}
+.input {
+    width: 560px;
+    height: 22px;
+    margin-top: 32px;
+    margin-left: 41px;
+    border: none;
+    background: none;
+    font-family: Aleo, serif;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 24px;
+    color: #F2785C;
+}
+::placeholder {
+    color: #F2785C;
+}
+.search-button {
+    width: 228px;
+    height: 59px;
+    background-color: #0D606F;
+    border: #0D606F;
+    border-radius: 10px;
+    box-shadow:  0px 0px 3px rgba(13, 96, 111, 0.08), 0px 2px 3px rgba(13, 96, 111, 0.16);
+    margin-top: 18px;
+    margin-left: 45px;
+    font-family: 'Red Hat Text', sans-serif;
+    font-size: 24px;
+    color: white;
+    line-height: 32px;
+}
