--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ html {
     display: flex;
     position: absolute;
     z-index: 100;
+    box-shadow: 0px 4px 4px rgba(13, 96, 111, 0.5);
 }
 .logo {
     width: 216px;
@@ -303,6 +304,7 @@ html {
 }
 .stories-picture {
     border-radius: 16px;
+    filter: drop-shadow(0px 4px 4px #0D606F);
 }
 .stories-text {
     margin-left: 40px;
